--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
         <h1> Aproveite na TV. </h1>
         <p> Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV, aparelhos de Blu-ray e outros dispositivos. </p>
       </div>
-
-      <img class="tv" src="./img/tv.png">
+      <div class="img-tv">
+        <img class="tv" src="./img/tv.png">
+        <video class="video-tv" autoplay playsinline muted loop>
+          <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-0819.m4v">
+        </video>
+      </div>
     </div>
   </section>
 
@@ -69,7 +73,12 @@
 
       </div>
 
-      <img class="device-pile" src="./img/device-pile.png">
+      <div class="device-pile-img">
+        <img class="device-pile" src="./img/device-pile.png">
+        <video class="video-tela" autoplay muted loop>
+          <source src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices.m4v">
+        </video>
+      </div>
 
     </div>
   </section>
@@ -79,7 +88,9 @@
     <div class="FAQ">
 
       <div class="question">
-        <h2> O que é Netflix ? </h2>
+        <div class="question-titulo">
+          <h2> O que é Netflix ? </h2>
+        </div>
         <div class="res-faq">
           <p>A Netflix é um serviço de transmissão online que oferece uma ampla variedade de séries, filmes e documentários premiados em milhares de aparelhos conectados à internet. </p>
 
@@ -87,7 +98,9 @@
         </div>
       </div>
       <div class="question">
-        <h2> Quando custa a Netflix ? </h2>
+        <div class="question-titulo">
+          <h2> Quando custa a Netflix ? </h2>
+        </div>
         <div class="res-faq">
           <p>Assista à Netflix no seu celular, tablet, Smart TV, notebook ou aparelho de streaming por uma taxa mensal única. Os planos variam de R$25,90 a R$55,90 por mês. Sem contrato nem taxas extras. </p>
 
@@ -95,7 +108,9 @@
         </div>
       </div>
       <div class="question">
-        <h2> Onde posso assistir ? </h2>
+        <div class="question-titulo">
+          <h2> Onde posso assistir ? </h2>
+        </div>
         <div class="res-faq">
           <p>Assista onde quiser, quando quiser. Faça login com sua conta Netflix em netflix.com para começar a assistir no computador ou em qualquer aparelho conectado à Internet compatível com o aplicativo Netflix, como Smart TVs, smartphones, tablets, aparelhos de streaming e videogames. </p>
 
@@ -103,7 +118,9 @@
         </div>
       </div>
       <div class="question">
-        <h2> Como faço para cancelar ? </h2>
+        <div class="question-titulo">
+          <h2> Como faço para cancelar ? </h2>
+        </div>
         <div class="res-faq">
           <p>A Netflix é flexível. Não há contratos nem compromissos. Você pode cancelar a sua conta na internet com apenas dois cliques. Não há taxa de cancelamento – você pode começar ou encerrar a sua assinatura a qualquer momento. </p>
 
@@ -111,7 +128,7 @@
       </div>
 
       <div class="question">
-        <div class="quesiton-titulo">
+        <div class="question-titulo">
           <h2> O que eu posso assistir na Netflix ? </h2>
         </div>
         <div class="res-faq">
@@ -120,7 +137,9 @@
       </div>
 
       <div class="question">
-        <h2> A Netflix é adqueada para crianças? </h2>
+        <div class="question-titulo">
+          <h2> A Netflix é adqueada para crianças? </h2>
+        </div>
         <div class="res-faq">
           <p>A Netflix é um serviço de transmissão online que oferece uma ampla variedade de séries, filmes e documentários premiados em milhares de aparelhos conectados à internet. </p>
 
@@ -144,6 +163,16 @@
     </div>
   </section>
 
+  <footer>
+    <div class="footer-container">
+      <h1> Duvidas ? ligue 0800 591 8942 </h1>
+
+
+    </div>
+  </footer>
+
+
+  <script src="script.js"> </script>
 </body>
 
 </html>
